--- a/analyze_results_loop_clean.ipynb
+++ b/analyze_results_loop_clean.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0e001649-0a4c-4563-be9d-5599717cc310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c07b334d-dbec-416f-b500-500cf47de143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "dc5ff55f-dcdf-4ca4-a556-657649011ffd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "edfafc41-c954-4d9b-9ad7-22c47c15c8bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +158,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "39dac0b4-95a5-4904-96f6-6fb6e3643407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +171,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "4e365341-56c4-4b3e-928d-0c23a21b5019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +199,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e85e4e96-799e-4da2-b199-1a186f97e9cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "87bd1c3d-f490-47d4-93d8-1a2bd0c68dae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +294,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ec0a1216-10ff-4fbf-acc5-da2f1764437b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "29647c5e-4af2-4afc-af75-a220be49d701",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5c766d67-314a-4a24-b2a8-d205f43ee559",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "82bc1916-cd2b-4f89-8224-afc5dbee3af2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +483,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "31ab6701-4fbf-4924-b99a-7cae14e4f369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +528,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "47dd582f-745f-4e19-b538-0bd69e19362d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +596,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "4d87133d-2c5a-496b-8aa7-f8dbc19da21f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +607,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4925596f-84ee-4993-bc8a-3735f90d4b03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +623,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "427ec2ca-7b34-4e1b-a524-09eb3fee2d12",
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +645,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9129cdc4-e519-4d6a-aeae-77db9aa16614",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +678,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7891cb7e-7a14-4699-a93d-72bcfa8ebb47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +688,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5975535f-90fb-4b78-a484-0d52f2a14fb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +699,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e71807ef-91e4-4eaf-aae2-aff065026628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +711,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "10a2835d-bfb4-43d3-afe1-1993dc717586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +720,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6d11e196-faa1-42a7-8ab1-f63caf49aae8",
    "metadata": {
     "scrolled": true
    },
@@ -762,7 +739,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "21054b51-d995-4f29-877d-1d2e6557dd97",
    "metadata": {
     "scrolled": true
    },
@@ -837,7 +813,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ce71546d-eb56-4977-817f-7b0e49c9a37b",
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1286,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ab03f72b-524d-47ad-bad0-f0100196d648",
    "metadata": {
     "scrolled": true
    },
@@ -1430,7 +1404,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "aae79e91-16a3-4376-a733-31fc952ad88b",
    "metadata": {
     "scrolled": true
    },
@@ -1457,7 +1430,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "494b3b44-cfdf-4aa1-a003-e9f00fb9a0e6",
    "metadata": {},
    "source": [
     "# Eval Metrics"
@@ -1466,7 +1438,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "073dcc2d-ba90-45d2-a25f-2183743ca284",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1456,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5690eade-bbf4-43c6-85ea-67d8109ad517",
    "metadata": {
     "scrolled": true
    },
@@ -1514,7 +1484,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3bdadd12-ccd3-470f-b6f5-52236bd7981c",
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2449,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "88ca188c-c552-4d20-81fc-1337fd875f5c",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -2559,7 +2527,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4f03a723-587d-4f32-af70-bc950c59e9c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2579,7 +2546,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8144de6b-7686-4e1d-a6ad-66cd8294c0b0",
    "metadata": {},
    "outputs": [
     {
@@ -2630,7 +2596,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5c2efc8d-59e4-4fb7-8207-5983ea02090e",
    "metadata": {},
    "outputs": [
     {
@@ -2795,7 +2760,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc421ac-1f50-40f2-b274-514572c491ef",
    "metadata": {},
    "source": [
     "# Get eval ceilings"
@@ -2804,7 +2768,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "246bca7b-48d4-4b0c-ab28-9ae5efcc129c",
    "metadata": {
     "scrolled": true
    },
@@ -3237,7 +3200,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "500cb876-145c-429d-8767-e770330e3ab3",
    "metadata": {
     "scrolled": true
    },
@@ -3793,7 +3755,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "50bc151a-8486-4430-8399-cad35528c91c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3809,7 +3770,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "cfa45d2d-8743-4edb-a74c-0b7119bc4178",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3819,7 +3779,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2bb71836-501f-4c1b-a27c-45523f05677c",
    "metadata": {},
    "outputs": [
     {
@@ -4489,7 +4448,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "db5890ed-21b0-49b2-97ea-856bf0cbe23c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4517,7 +4475,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "b0d1ce7d-f040-4216-ae3e-3d09d7c90dc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4527,7 +4484,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b990995d-9f9b-46b8-ad6c-66fb2316e45a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4535,7 +4491,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6d79f72d-46f2-4c48-9f55-7aa4e33a4408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4545,7 +4500,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fa6504ab-9ce7-4e09-9c38-e7bf55406a9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4555,7 +4509,6 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "46dace37-abcc-4bd7-b738-39e79bb0d84d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4565,7 +4518,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5ef0d85c-814f-4274-935e-635ee0a3d734",
    "metadata": {},
    "outputs": [
     {
@@ -4593,7 +4545,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f3cf501d-ac28-4560-babe-244f34ea6b24",
    "metadata": {},
    "outputs": [
     {
@@ -4621,7 +4572,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2454f0cf-b88d-4c5e-a50c-ac0bf9c006c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4631,7 +4581,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "91bfff9d-2f7b-4add-b375-d29013c4c062",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4639,7 +4588,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9100c84a-18b1-4ac8-b512-926900a3310e",
    "metadata": {},
    "outputs": [
     {
@@ -4663,7 +4611,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5e701fdc-bb1f-45a0-a745-ef5bea9dde92",
    "metadata": {},
    "outputs": [
     {
@@ -4702,7 +4649,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "043032ad-9853-4364-ae4b-233eeb5d4312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4712,7 +4658,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5dd34e3d-9774-4ee3-9144-daea6d606c50",
    "metadata": {},
    "outputs": [
     {
@@ -4733,7 +4678,6 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "5c283879-c5ba-458a-84ad-8d535d6d2b11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4743,7 +4687,6 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "f118521c-7e87-49e1-897c-7f030ec15e31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4756,7 +4699,6 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "e129b65d-a394-4dad-92bd-b61208bfc09b",
    "metadata": {},
    "outputs": [
     {
@@ -4798,7 +4740,6 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "18609a57-2159-44cb-9ece-0b7113022bbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4809,7 +4750,6 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "1a78d5ba-cc3e-4123-a0ff-c91c9b4d435c",
    "metadata": {},
    "outputs": [
     {
@@ -4851,7 +4791,6 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "996c0c32-f3b1-43dd-88e7-1ca34966aee3",
    "metadata": {},
    "outputs": [
     {
@@ -4870,7 +4809,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "38bfd107-1b57-463d-8b85-d9b2913dd92c",
    "metadata": {},
    "outputs": [
     {
@@ -4899,7 +4837,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c4d8713b-046c-4816-8488-acc53dfdb44c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4910,7 +4847,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "5313700c-7826-4977-a138-8e6aa07e616f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4920,7 +4856,6 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "476caa0e-be7a-4cf9-8696-740f492f2bbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4930,7 +4865,6 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "c185768a-32b4-4ed7-93fb-178643eae56c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4942,7 +4876,6 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "e16ef5bb-de8a-4518-8f3d-c920dffe6a7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4952,7 +4885,6 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "7a494121-d4c3-488f-ac9d-36a4cc902c91",
    "metadata": {},
    "outputs": [
     {
@@ -4983,7 +4915,6 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "f115e90d-0c6f-4a90-8c4e-e6c6b18c0cfe",
    "metadata": {
     "scrolled": true
    },
@@ -5056,7 +4987,6 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "2782b332-242f-4108-a0e4-d1a8329661f5",
    "metadata": {},
    "outputs": [
     {
@@ -5091,7 +5021,6 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "aa801dfc-8eab-405d-8179-2f29f896b4f0",
    "metadata": {},
    "outputs": [
     {
@@ -5126,7 +5055,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d6b69a1-007a-49a2-821a-450eaae9b224",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5134,7 +5062,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "elrpy",
    "language": "python",
    "name": "python3"
   },
@@ -5148,7 +5076,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
