--- a/analyze_results_loop_clean.ipynb
+++ b/analyze_results_loop_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
      "output_type": "stream",
      "text": [
       "['kaggle_Myeloid cells_Belinostat_pred.h5ad', 'kaggle_NK cells_Belinostat_pred.h5ad', 'kaggle_B cells_Belinostat_pred.h5ad', 'kaggle_T cells CD4+_Belinostat_pred.h5ad', 'kaggle_T cells CD8+_Belinostat_pred.h5ad', 'kaggle_T regulatory cells_Belinostat_pred.h5ad', 'sciplex_middle_subset_A549_Belinostat_1.0_pred.h5ad', 'sciplex_middle_subset_K562_Belinostat_1.0_pred.h5ad', 'sciplex_middle_subset_MCF7_Belinostat_1.0_pred.h5ad', 'kaggle_B cells_Belinostat_pred_MELD.h5ad', 'kaggle_Myeloid cells_Belinostat_pred_MELD.h5ad', 'kaggle_NK cells_Belinostat_pred_MELD.h5ad', 'kaggle_T cells CD4+_Belinostat_pred_MELD.h5ad', 'kaggle_T cells CD8+_Belinostat_pred_MELD.h5ad', 'kaggle_T regulatory cells_Belinostat_pred_MELD.h5ad']\n",
-      "['kaggle.hvg.npz', 'kaggle.hvg.pca.npz', 'kaggle.X.identity.npz', 'kaggle.X.cmha.identity.npz', 'kaggle.X.cmlp.identity.npz', 'kaggle.X.cmha.identity.strat.npz', 'kaggle.X.cmlp.identity.strat.npz', 'kaggle.X.cmlp.identity.strat_new.npz', 'kaggle.X.cmha.identity.strat_new.npz', 'kaggle.X.cmha.identity.strat_new2.npz', 'kaggle.X.cmlp.identity.strat_new2.npz', 'kaggle.X.cmha.identity.strat.4.npz', 'kaggle.X.cmlp.identity.strat.4.npz']\n"
+      "['kaggle.hvg.npz', 'kaggle.hvg.pca.npz', 'kaggle.X.identity.npz', 'kaggle.X.cmha.identity.npz', 'kaggle.X.cmlp.identity.npz', 'kaggle.X.cmha.identity.strat.npz', 'kaggle.X.cmlp.identity.strat.npz', 'kaggle.X.cmlp.identity.strat_new.npz', 'kaggle.X.cmha.identity.strat_new.npz', 'kaggle.X.cmha.identity.strat_new2.npz', 'kaggle.X.cmlp.identity.strat_new2.npz', 'kaggle.X.cmha.identity.strat.4.npz', 'kaggle.X.cmlp.identity.strat.4.npz', 'kaggle.raw.cmlp.identity.strat.npz', 'kaggle.raw.cmha.identity.strat.npz']\n"
      ]
     }
    ],
@@ -5062,9 +5062,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "elrpy",
+   "display_name": "dsbm",
    "language": "python",
-   "name": "python3"
+   "name": "dsbm"
   },
   "language_info": {
    "codemirror_mode": {
