updates to llm/dataloaders

--- a/cfm/train_llm.ipynb
+++ b/cfm/train_llm.ipynb
@@ -200,37 +200,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "class IterableDataloader(DataLoader):\n",
-    "    def __init__(self, dl):\n",
-    "        self.dl = dl\n",
-    "        self.idl = iter(self)\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        return iter(self.dl)\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.dl)\n",
-    "    \n",
-    "    def __getitem__(self, _):\n",
-    "        return next(self.idl)\n",
-    "\n",
-    "def shuffle_array_tuple(arrays):\n",
-    "    n = arrays[0].shape[0]\n",
-    "    perm = np.random.permutation(n)\n",
-    "    return tuple(a[perm] for a in arrays)\n",
-    "\n",
-    "dlc = torch.utils.data.DataLoader(\n",
-    "    IterableDataloader(dl), batch_size=4, \n",
-    "    collate_fn=lambda batch: shuffle_array_tuple(tuple(torch.vstack([b[i] for b in batch]) for i in range(len(batch[0]))))\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -258,21 +227,6 @@
     "warmup_epoch = 1\n",
     "minibatch_size = 128\n",
     "save_dir = \"llm/v\""
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "bs = []\n",
-    "for b in iter(dl):\n",
-    "    bs.append(b)\n",
-    "    if len(bs) == 100:\n",
-    "        break\n",
-    "bcontrol, bpert, bpert_index = [torch.vstack([b[i] for b in bs]) for i in range(3)]\n",
-    "n = bcontrol.shape[0]\n",
-    "perm = np.random.permutation(n)\n",
-    "bcontrol, bpert, bpert_index = bcontrol[perm], bpert[perm], bpert_index[perm]"
    ]
   },
   {
@@ -577,7 +531,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "tv: 256.287:  27%|████████████████████████████████████████████                                                                                                                         | 163/611 [16:21<47:19,  6.34s/it]"
+      "tv: 262.359:  27%|█████████████████████████████████████████████▎                                                                                                                       | 168/611 [16:56<46:48,  6.34s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 4.9998e-05.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 266.862:  29%|███████████████████████████████████████████████▊                                                                                                                     | 177/611 [17:47<37:19,  5.16s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 4.9997e-05.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 244.537:  30%|█████████████████████████████████████████████████▍                                                                                                                   | 183/611 [18:22<40:49,  5.72s/it]"
      ]
     }
    ],
