updates to llm/dataloaders

--- a/cfm/train_llm.ipynb
+++ b/cfm/train_llm.ipynb
@@ -201,13 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = MAE(\n",
     "    X.shape[1], emb_dim=24, decoder_layer=4, encoder_layer=4, encoder_head=3, decoder_head=3, ff_dim=128,\n",
-    "    true_sparsity=False\n",
+    "    true_sparsity=False, expr_activation=\"sigmoid\"\n",
     ")\n",
     "# model = torch.load(f\"...\")\n",
     "device = 'cuda'\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -265,301 +265,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "tv: 423.204:   2%|██▋                                                                                                                                                                   | 10/611 [00:51<52:30,  5.24s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 412.100:   3%|████▊                                                                                                                                                               | 18/611 [01:41<1:02:20,  6.31s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 387.724:   4%|███████▏                                                                                                                                                            | 27/611 [02:32<1:00:39,  6.23s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 385.573:   6%|█████████▌                                                                                                                                                            | 35/611 [03:23<56:44,  5.91s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 370.119:   7%|███████████▋                                                                                                                                                          | 43/611 [04:14<59:59,  6.34s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 371.877:   9%|██████████████▏                                                                                                                                                       | 52/611 [05:05<57:43,  6.20s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 375.415:  10%|████████████████▎                                                                                                                                                     | 60/611 [05:56<52:10,  5.68s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 357.558:  11%|██████████████████▍                                                                                                                                                   | 68/611 [06:47<57:05,  6.31s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 351.573:  13%|████████████████████▉                                                                                                                                                 | 77/611 [07:38<54:02,  6.07s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9999e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 336.726:  14%|███████████████████████                                                                                                                                               | 85/611 [08:28<52:37,  6.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9999e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 325.161:  15%|█████████████████████████▌                                                                                                                                            | 94/611 [09:19<48:32,  5.63s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9999e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 323.682:  17%|███████████████████████████▊                                                                                                                                         | 103/611 [10:10<49:32,  5.85s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9999e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 310.862:  18%|█████████████████████████████▉                                                                                                                                       | 111/611 [11:01<52:40,  6.32s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9999e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 293.289:  19%|████████████████████████████████▏                                                                                                                                    | 119/611 [11:52<51:45,  6.31s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9999e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 299.939:  21%|██████████████████████████████████▌                                                                                                                                  | 128/611 [12:42<45:04,  5.60s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9999e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 297.820:  22%|████████████████████████████████████▋                                                                                                                                | 136/611 [13:33<46:12,  5.84s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9998e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 288.895:  24%|██████████████████████████████████████▉                                                                                                                              | 144/611 [14:24<45:28,  5.84s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9998e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 281.787:  25%|█████████████████████████████████████████                                                                                                                            | 152/611 [15:15<47:49,  6.25s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9998e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 263.144:  26%|███████████████████████████████████████████▏                                                                                                                         | 160/611 [16:05<47:35,  6.33s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9998e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 262.359:  27%|█████████████████████████████████████████████▎                                                                                                                       | 168/611 [16:56<46:48,  6.34s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9998e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 266.862:  29%|███████████████████████████████████████████████▊                                                                                                                     | 177/611 [17:47<37:19,  5.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adjusting learning rate of group 0 to 4.9997e-05.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tv: 244.537:  30%|█████████████████████████████████████████████████▍                                                                                                                   | 183/611 [18:22<40:49,  5.72s/it]"
+      "tv: 2123.005:   0%|                                                                                                                                                                              | 0/611 [00:03<?, ?it/s]"
      ]
     }
    ],
