--- a/omnicell/notebooks/kang.ipynb
+++ b/omnicell/notebooks/kang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,19 +215,19 @@
        "[16893 rows x 8 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata = sc.read('kang.h5ad')\n",
+    "adata = sc.read('/orcd/archive/abugoot/001/Projects/opitcho/sandbox/omnicell/kang.h5ad')\n",
     "adata.obs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "Categories (7, object): ['CD4T', 'CD14+Mono', 'B', 'CD8T', 'NK', 'FCGR3A+Mono', 'Dendritic']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,6 +271,38 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['AL627309.1', 'RP11-206L10.9', 'LINC00115', 'NOC2L', 'KLHL17', 'HES4',\n",
+       "       'ISG15', 'TNFRSF18', 'TNFRSF4', 'SDF4',\n",
+       "       ...\n",
+       "       'C21orf67', 'FAM207A', 'ADARB1', 'POFUT2', 'COL18A1', 'SLC19A1',\n",
+       "       'COL6A2', 'FTCD', 'DIP2A', 'S100B'],\n",
+       "      dtype='object', name='index', length=6998)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata.var_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
